Fix padding on mobile

--- a/SaturdayQuizWeb/wwwroot/css/styles.less
+++ b/SaturdayQuizWeb/wwwroot/css/styles.less
@@ -177,9 +177,6 @@ body {
 }
 
 @media(max-width: 700px) {
-  body {
-    padding: @dimen-outer-padding-narrow;
-  }
   #question-what-links {
     .non-indented;
   }
